[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/Enemies.png" type="Texture" id=1]
[ext_resource path="res://Assets/Enemy/World_beholder.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=5]
radius = 5.09902

[sub_resource type="Animation" id=2]
resource_name = "Beholder_anim"
length = 1.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 12 ]
}

[sub_resource type="Animation" id=4]
resource_name = "damage_anim"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.0588235 ), Color( 0, 0, 0, 0.137255 ), Color( 1, 1, 1, 0.407843 ), Color( 0, 0, 0, 0.521569 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="CircleShape2D" id=3]
radius = 6.0

[node name="Boss" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 13
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1, 1 )
texture = ExtResource( 1 )
hframes = 9
vframes = 7
frame = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2 )
shape = SubResource( 5 )

[node name="Beholder_Animation" type="AnimationPlayer" parent="."]
anims/Beholder_anim = SubResource( 2 )
anims/damage_anim = SubResource( 4 )

[node name="Body" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body"]
visible = false
position = Vector2( 0, 2 )
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="area_entered" from="Body" to="." method="_on_Body_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
